tests/liquid/neg/arrays/arr-00.js

/*@ foo :: ([number]) => { string | true } */
function foo(a) {

  return a[0];

}
